2011-11-07  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [EFL] Need to replace api's object parameter with proper name.
        https://bugs.webkit.org/show_bug.cgi?id=71553

        Fix wrong parameter names in tiled backing store functions and ewk_view_xxx files.

        Reviewed by Filip Pizlo.

        * ewk/ewk_tiled_backing_store.cpp:
        * ewk/ewk_view_single.cpp:
        * ewk/ewk_view_tiled.cpp:

2011-11-07  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] Emit the "frame,created" signal earlier.
        https://bugs.webkit.org/show_bug.cgi?id=71696

        Reviewed by Kenneth Rohde Christiansen.

        FrameLoader::loadURLIntoChildFrame will trigger the machinery that will call
        FrameLoaderClientEfl::dispatchDidStartProvisionalLoad. However, since we were
        emitting the "frame,created" signal after that, applications would connect to
        it after some other frame signals had already been emitted. Should help tests
        such as http/tests/loading/empty-subframe.html pass.

        * ewk/ewk_frame.cpp:
        (ewk_frame_child_add):
        * ewk/ewk_view.cpp:
        (ewk_view_frame_create):

2011-11-04  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] DRT: Fix the order of the items in the dumped history list.
        https://bugs.webkit.org/show_bug.cgi?id=71562

        It did not make much sense to hold the history list in a map, as we do not need
        the keys. And the printed items must be sorted by target, which is more easily
        done with a vector.

        Should make tests such as http/tests/navigation/error404-frames.html pass.

        Reviewed by Antonio Gomes.

        * WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
        (DumpRenderTreeSupportEfl::childHistoryItems):
        * WebCoreSupport/DumpRenderTreeSupportEfl.h:

2011-11-04  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [EFL] Use standard booleand data type.
        https://bugs.webkit.org/show_bug.cgi?id=71433
